package com.example.factory;

public abstract class OsDisplaySystem {

  public OsDisplaySystem() {

  }

  public abstract void displayOsName();

  public abstract void displayStr(String str);
}
