package com.example.factory.windows;

import com.example.factory.OsDisplaySystem;

public class WindowsDisplaySystem extends OsDisplaySystem {

	@Override
	public void displayOsName() {
		// TODO Auto-generated method stub
		
	}

	@Override
	public void displayStr(String str) {
		// TODO Auto-generated method stub
		
	}
  
}
