package com.example.factory.windows;

import com.example.factory.OsFileSystem;

public class WindowsFileSystem extends OsFileSystem {

	@Override
	public String getFileSeparetor() {
		// TODO Auto-generated method stub
		return null;
	}

	@Override
	public String getRootPath() {
		// TODO Auto-generated method stub
		return null;
	}

	@Override
	public void saveFile(String fileName) {
		// TODO Auto-generated method stub
		
	}
  
}
